--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   
   <div class="index">
-    <img src="C:\Users\MRS. ALLI\Desktop\New project\Luscious-Project\Luscious-Project\images\image-qr-code.png">
+    <img src="./images/image-qr-code.png">
   
       <p class="bold">Improve your front-end skills by building projects</p>
     
