--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="index.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="C:\Users\MRS. ALLI\Documents\Luscious-Project\images\favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
-  
   <title>Frontend Mentor | QR code component</title>
 
 </head>
 <body>
+  <header>
+    <div class="index">
+      <img src="C:\Users\MRS. ALLI\Documents\Luscious-Project\images\image-qr-code.png" alt="QR code image">
   
-  <div class="index">
-    <img src="./images/image-qr-code.png">
-  
-      <p class="bold">Improve your front-end skills by building projects</p>
+      <h1>Improve your front-end skills by building projects</h1>
     
    
-      <p class="light">Scan the QR code to visit Frontend Mentor and take your coding skills to the next</p>
-    
-  </div>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next</p>
+    </div>
+  </header>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Opeyemi</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Opeyemi</a>.
+    </div>
+  </footer>
 </body>
 </html>
