--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-  <header>
+  <header role="main">
     <div class="index">
       <img src="C:\Users\MRS. ALLI\Documents\Luscious-Project\images\image-qr-code.png" alt="QR code image">
   
