--- a/index.html
+++ b/index.html
@@ -13,18 +13,22 @@
 
 </head>
 <body>
-  <header role="main">
+ 
     <div class="index">
-      <img src="C:\Users\MRS. ALLI\Documents\Luscious-Project\images\image-qr-code.png" alt="QR code image">
-  
-      <h1>Improve your front-end skills by building projects</h1>
+      <header role="QR Code">  
+           <img src="C:\Users\MRS. ALLI\Documents\Luscious-Project\images\image-qr-code.png" alt="QR code image">
+      </header>
+
+      <main role="main">
+         <h1>Improve your front-end skills by building projects</h1>
     
    
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next</p>
+         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next</p>
+      </main>
     </div>
-  </header>
+  
 
-  <footer>
+  <footer role="contentinfo">
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Opeyemi</a>.
