--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
  
     <div class="index">
-      <header role="QR Code">  
-           <img src="C:\Users\MRS. ALLI\Documents\Luscious-Project\images\image-qr-code.png" alt="QR code image">
+      <header>  
+           <img src="./images/image-qr-code.png" alt="QR code image">
       </header>
 
-      <main role="main">
+      <main>
          <h1>Improve your front-end skills by building projects</h1>
     
    
@@ -28,7 +28,7 @@
     </div>
   
 
-  <footer role="contentinfo">
+  <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Opeyemi</a>.
